<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="4dp"
    android:paddingRight="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/backup_password_label"
        android:textColor="@color/text_secondary"
        android:textSize="13sp" />

    <EditText
        android:id="@id/backup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_input"
        android:hint="@string/backup_password_hint"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary" />

    <TextView
        android:id="@id/backup_password_confirmation_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/backup_password_confirmation_label"
        android:textColor="@color/text_secondary"
        android:textSize="13sp" />

    <EditText
        android:id="@id/backup_password_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_input"
        android:hint="@string/backup_password_confirmation_hint"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary" />
</LinearLayout>
